# ros2_playground

./: .gitignore  note.txt  readme.md
src/: local-rosdep.yaml
src/your_interfaces/: CMakeLists.txt  package.xml
src/your_interfaces/msg/: GpsData.msg
src/your_package/: package.xml  setup.cfg  setup.py
src/your_package/launch/: gps_launch.py
src/your_package/your_package/: gps_publisher.py  gps_subscriber.py
src/your_robot_meta/: CMakeLists.txt  package.xml
